<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    >


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/cardView"
        android:padding="10dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp"
        android:layout_height="wrap_content"
        app:contentPadding="10dp"
        app:cardElevation="3dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative"
            android:padding="10dp">


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp"
                android:layout_alignParentLeft="true"
                android:text="135lbs"
                android:textSize="24sp"
                android:id="@+id/weight"
                android:layout_alignParentTop="true"
                />

            <TextView
                android:text="Lift:"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:id="@+id/liftTitle"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/weight"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/liftTitle"
                android:id="@+id/titleDividerNoCustom"/>

            <Button
                android:text="@string/default_preset_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preset1"
                style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                android:textSize="24sp"
                android:textColor="@color/actionBarGray"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="?android:selectableItemBackground"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/titleDividerNoCustom"
                android:layout_marginLeft="8dp"
                android:paddingTop="8dp"
                />

            <Button
                android:text="@string/default_preset_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preset2"
                style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                android:textSize="24sp"
                android:textColor="@color/actionBarGray"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="?android:selectableItemBackground"
                android:layout_alignTop="@+id/preset1"
                android:layout_toRightOf="@+id/preset1"
                android:layout_marginLeft="8dp"
                android:paddingTop="8dp"
                android:layout_below="@+id/titleDividerNoCustom"/>

            <Button
                android:text="@string/default_preset_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preset5"
                style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                android:textSize="24sp"
                android:textColor="@color/actionBarGray"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="?android:selectableItemBackground"
                android:layout_alignBaseline="@+id/preset1"
                android:layout_alignBottom="@+id/preset1"
                android:layout_toRightOf="@+id/preset4"
                android:layout_marginLeft="8dp"
                android:layout_below="@+id/titleDividerNoCustom"/>

            <Button
                android:text="@string/default_preset_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preset4"
                style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                android:textSize="24sp"
                android:textColor="@color/actionBarGray"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="?android:selectableItemBackground"
                android:layout_alignBaseline="@+id/preset3"
                android:layout_alignBottom="@+id/preset3"
                android:layout_toRightOf="@+id/preset3"
                android:layout_marginLeft="8dp"
                android:layout_below="@+id/titleDividerNoCustom"/>

            <Button
                android:text="@string/default_preset_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preset3"
                style="@android:style/Widget.Material.Button.Small"
                android:textSize="24sp"
                android:textColor="@color/actionBarGray"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="?android:selectableItemBackground"
                android:layout_alignBaseline="@+id/preset2"
                android:layout_alignBottom="@+id/preset2"
                android:layout_centerInParent="false"
                android:layout_toRightOf="@+id/preset2"
                android:layout_marginLeft="8dp"
                android:layout_below="@+id/titleDividerNoCustom"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>