<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    >


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/cardView"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="8dp"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        android:layout_margin="8dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative"
            android:paddingBottom="4dp"
            >

            <TextView
                android:text="Lift:"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:id="@+id/liftTitle"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:layout_alignParentLeft="true"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_alignParentLeft="true"
                android:text="135"
                android:textSize="70sp"
                android:textColor="@android:color/white"
                android:id="@+id/weight"
                android:layout_below="@+id/liftTitle"
                />

            <TextView
                android:text="lbs"
                android:textSize="50sp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/weight"
                android:layout_toEndOf="@+id/weight"
                android:id="@+id/txtLbs"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingTop="16dp"
                android:src="@drawable/ic_more_vert_white_24dp"
                android:id="@+id/cardMenu"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_more_vert_white_24dp"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:cropToPadding="true"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/lightGray"
                android:layout_below="@+id/weight"
                android:id="@+id/titleDividerNoCustom"
                android:layout_margin="8sp"
                />


            <Button
                android:text="@string/default_preset_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preset1"
                style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/titleDividerNoCustom"
                android:layout_marginLeft="4dp"
                android:background="?android:attr/selectableItemBackground"
                />

            <Button
                android:text="@string/default_preset_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preset2"
                style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="?android:attr/selectableItemBackground"
                android:layout_alignTop="@+id/preset1"
                android:layout_toRightOf="@+id/preset1"
                android:layout_marginLeft="4dp"
                android:layout_below="@+id/titleDividerNoCustom"/>

            <Button
                android:text="@string/default_preset_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preset5"
                style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="?android:attr/selectableItemBackground"
                android:layout_alignBaseline="@+id/preset1"
                android:layout_alignBottom="@+id/preset1"
                android:layout_toRightOf="@+id/preset4"
                android:layout_marginLeft="4dp"
                android:layout_below="@+id/titleDividerNoCustom"/>

            <Button
                android:text="@string/default_preset_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preset4"
                style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="?android:attr/selectableItemBackground"
                android:layout_alignBaseline="@+id/preset3"
                android:layout_alignBottom="@+id/preset3"
                android:layout_toRightOf="@+id/preset3"
                android:layout_marginLeft="4dp"
                android:layout_below="@+id/titleDividerNoCustom"/>

            <Button
                android:text="@string/default_preset_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preset3"
                style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="?android:attr/selectableItemBackground"
                android:layout_alignBaseline="@+id/preset2"
                android:layout_alignBottom="@+id/preset2"
                android:layout_centerInParent="false"
                android:layout_toRightOf="@+id/preset2"
                android:layout_marginLeft="4dp"
                android:layout_below="@+id/titleDividerNoCustom"
                />
            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customPercent"
                style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="?android:attr/selectableItemBackground"
                android:layout_alignBaseline="@+id/preset3"
                android:layout_alignBottom="@+id/preset3"
                android:layout_centerInParent="false"
                android:layout_toRightOf="@+id/preset5"
                android:layout_marginLeft="4dp"
                android:layout_below="@+id/titleDividerNoCustom"
                />

            <Button
                android:id="@+id/customIcon"
                style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/titleDividerNoCustom"
                android:layout_centerInParent="false"
                android:background="?android:attr/selectableItemBackground"
                android:drawableStart="@drawable/ic_mode_edit_white_24dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>